# SelfAssistant

./: .env.example  .gitignore  pyproject.toml
data/jira/: phase1-tickets.yaml
docs/: 001-agent-engine-impl.md  001-agent-engine-plan.md  002-jira-management-impl.md  002-jira-management-plan.md  002-jira-management-result.md
scripts/jira/: common.sh  config.local.sh.example  config.sh  create-phase-tickets.sh
scripts/jira/issues/: create-issue.sh  get-issue-types.sh  get-issue.sh  link-task-to-epic.sh
src/self_assistant/config/: settings.py
src/self_assistant/memory/: embeddings.py
src/self_assistant/tools/: database.py
tests/unit/: test_database.py  test_embeddings.py  test_settings.py
