[tool.poetry]
name = "self-assistant"
version = "0.1.0"
description = "Personal AI assistant engine"
authors = ["kencom"]
packages = [{ include = "self_assistant", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.2"
langchain-anthropic = "^0.3"
anthropic = "^0.49"
rich = "^13"
click = "^8"
pydantic-settings = "^2"
sqlalchemy = "^2"
aiosqlite = "^0.20"
chromadb = "^0.6"
sentence-transformers = "^3"
pyyaml = "^6"
greenlet = "^3.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-asyncio = "^0.23"
pytest-cov = "^5"
pytest-mock = "^3"

[tool.poetry.scripts]
assistant = "self_assistant.interface.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=self_assistant --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
